# fireblocks-config

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/ci-configs/: rust.yml
.github/workflows/: cd.yml  check.yml  release-candidate.yml  release.yml  safety.yml  scheduled.yml  test.yml
examples/: default.toml  embedded.toml  notime.toml  override.toml  test.pem
src/: config.rs  error.rs  lib.rs
