[package]
name = "fireblocks-config"
version = "0.1.7"
edition = "2024"
description = "TOML configuration for fireblocks SDK"
repository = "https://github.com/CarteraMesh/fireblocks-config"
license = "MIT"
authors = ["gh@cartera-mesh.com"]
documentation = "https://docs.rs/fireblocks-config"
homepage = "https://github.com/CarteraMesh/fireblocks-config"
keywords = ["fireblocks", "blockchain", "crypto"]
categories = ["cryptography::cryptocurrencies", "config"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
gpg = ["gpgme"]
xdg = ["microxdg"]

[dependencies]
gpgme = { version = "0.11", optional = true }
microxdg = { version = "0.2", optional = true }
config = { version = "0.15" }
dirs = { version = "6" }
thiserror = { version = "2" }
serde = { version = "1" }
serde_json = { version = "1" }
clap = { version = "4", features = ["derive"] }
log = { version = ">=0.3" }

[dev-dependencies]
anyhow = { version = "1" }
