[package]
name = "fireblocks-config"
version = "0.1.11"
edition = "2024"
description = "TOML configuration for fireblocks SDK"
repository = "https://github.com/CarteraMesh/fireblocks-config"
license = "MIT"
authors = ["gh@cartera-mesh.com"]
documentation = "https://docs.rs/fireblocks-config"
homepage = "https://github.com/CarteraMesh/fireblocks-config"
keywords = ["fireblocks", "blockchain", "crypto"]
categories = ["cryptography::cryptocurrencies", "config"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
gpg = ["gpgme"]

[dependencies]
config = { version = "0.15" }
dirs = { version = "6" }
gpgme = { version = "0.11", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
thiserror = { version = "2" }
tracing = { version = "0.1" }

[dev-dependencies]
anyhow = { version = "1" }
test-log = { version = "0.2", default-features = false, features = ["trace"] }
